--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,9 @@
 language: python
-
+python:
+ - 2.7
+sudo: false
 install:
-  - pip install -q --use-mirrors tox==1.6.1 coveralls==0.3
-
+ - pip install tox
 script:
-  - coverage erase
-  - tox
-after_success:
-  - coverage combine
-  - coveralls
-
-notifications:
-  email:
-    - goinnn@gmail.com
+ - tox -e flake8
+ - tox -e travis
